[project]
name = "assignment08"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.2",
    "html2text>=2025.4.15",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.6",
    "lxml>=6.0.2",
    "playwright>=1.57.0",
    "streamlit>=1.52.2",
]
